--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "immer": "^5.0.0",
     "react": "16.9.0",
+    "react-dom": "^16.12.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.1",
     "react-native-reanimated": "^1.4.0",
@@ -21,7 +23,10 @@
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "reactotron-react-native": "^4.0.2",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
