--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.2")
@@ -22,6 +24,8 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
